...
        <StatusBar barStyle="light-content" backgroundColor="black" />
        <View style={getStartedStyles.button}>
          <CustomButton
            title="Get Started"
            width={wp('90%')}
            onPress={() => handleGetStarted()}
            testID="get-started-button"
          />
        </View>
      </View>
    </View>
  );
};
...
